--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,16 @@
 <body>
     <h1>HELLO MONGO</h1>
     <div>
-        Add new user
-        <input type="text" name="user" value="Gokul">
-        <button class="btn1">Add User</button>
+        NEW USER
+        <input type="text" name="user" value="">
+        <button class="btn1">ADD USER</button>
     </div>
     <div>
-        Find in database filter
-        <input type="text" name="finder" value="Gokul">
-        <button class="btn3">Find Match</button>
+        FIND
+        <input type="text" name="finder" value="">
+        <button class="btn3">FIND USER</button>
     </div>
-    <button class="btn2">List Data</button>
+    <button class="btn2">LIST DATA</button>
     <div class="output"></div>
     <script>
         const input1 = document.querySelector('input[name="user"]');
@@ -101,18 +101,24 @@
         })
 
         btn1.addEventListener('click', () => {
-            console.log('post request inintiated')
-            const data = { name: input1.value };
-            console.log(data);
-            fetch(endPoint, {
-                method: 'post',
-                body: JSON.stringify(data),
-                headers: {
-                    'Content-Type': 'application/json'
-                }
-            }).then(res => res.json()).then(data => {
-                console.log(data);
-            })
+            console.log('post request initiated');
+        const data = { name: input1.value };
+        fetch(endPoint, {
+          method: "post",
+          body: JSON.stringify(data),
+          headers: {
+            "Content-Type": "application/json",
+          },
+        })
+          .then((res) => res.json())
+          .then((data) => {
+            if (data.status) {
+              alert("Please Enter the Name");
+            } else {
+              console.log("user details added succesfully");
+              console.log(data);
+            }
+          });
         })
 
     </script>
