--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
                             'Content-Type': 'application/json'
                         }
                     }).then(res => res.json()).then(data => {
-                        if(data.status){
+                        if (data.status) {
                             main.remove();
                         }
                     })
@@ -102,23 +102,23 @@
 
         btn1.addEventListener('click', () => {
             console.log('post request initiated');
-        const data = { name: input1.value };
-        fetch(endPoint, {
-          method: "post",
-          body: JSON.stringify(data),
-          headers: {
-            "Content-Type": "application/json",
-          },
-        })
-          .then((res) => res.json())
-          .then((data) => {
-            if (data.status) {
-              alert("Please Enter the Name");
-            } else {
-              console.log("user details added succesfully");
-              console.log(data);
-            }
-          });
+            const data = { name: input1.value };
+            fetch(endPoint, {
+                method: "post",
+                body: JSON.stringify(data),
+                headers: {
+                    "Content-Type": "application/json",
+                },
+            })
+                .then((res) => res.json())
+                .then((data) => {
+
+                    console.log("user details added succesfully");
+                    console.log(data);
+
+                }).catch(err => {
+                    alert("Please Enter the Name", err);
+                })
         })
 
     </script>
