--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,7 @@
                         if (data.status) {
                             main.remove();
                         }
+                        alert('Deleted Successfully!!!');
                     })
                 })
                 main.append(button1);
@@ -76,6 +77,7 @@
                         }
                     }).then(res => res.json()).then(data => {
                         console.log(data);
+                        alert('Updated Successfully');
                     })
                 })
                 main.append(button2);
